New And Updated Bubble game index file uploaded

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
     <title>The Bubble Game</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <div class="main">
-        <div class="pannel">
-            <!-- top of the pannel  -->
-            <div class="header">
+      <div class="pannel">
+        <!-- top of the pannel  -->
+        <div class="header">
                 <div class="hit ">
                     <p>Hit</p>
                     <div class="hit-box">2</div>
@@ -26,14 +26,23 @@
                 </div>
             </div>
 
-            <!-- bubble area in pannel  -->
-            <div class="bubble-area">
-                <div class="bubble">5</div>
+        <!-- bubble area in pannel  -->
+        <div class="bubble-area">
+                
             </div>
 
+            <!-- Time out Ui -->
+   
+
+      <footer>
+        <div class="links">
+          <a href="#"><li><i class="ri-github-fill"></i> <a href="https://github.com/rohitsinghthakur" target="_blank" >Github</a></li></a>
+          <a href="#"><li><i class="ri-linkedin-box-fill"></i><a href="linkedin.com/in/rohit-singh-117644204" target="_blank">Linkdin</a> </li></a>
+          <a href="#"><li> <i class="ri-mail-line"></i> <a href="mailto:thakurrohit4580@gmail.com" target="_blank">Mail</a></li></a>
         </div>
+      </footer>
     </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
