--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
       <footer>
         <div class="links">
-          <a href="https://github.com/rohitsinghthakur" target="_blank"><li><i class="ri-github-fill"></i> Github</li></a>
-          <a href="linkedin.com/in/rohit-singh-117644204" target="_blank"><li><i class="ri-linkedin-box-fill"></i>Linkdin</li></a>
-          <a href="mailto:thakurrohit4580@gmail.com" target="_blank"><li> <i class="ri-mail-line"></i> Mail</li></a>
+          <a href="https://github.com/rohitsinghthakur" target="_blank"><li><i class="ri-github-fill"></i> <p>Github</p></li></a>
+          <a href="linkedin.com/in/rohit-singh-117644204" target="_blank"><li><i class="ri-linkedin-box-fill"></i> <p>Linkdin</p></li></a>
+          <a href="mailto:thakurrohit4580@gmail.com" target="_blank"><li> <i class="ri-mail-line"></i> <p>Mail</p></li></a>
         </div>
       </footer>
     </div>
