--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <footer>
         <div class="links">
           <a href="https://github.com/rohitsinghthakur" target="_blank" ><li><i class="ri-github-fill"></i><span >Github</span></a></li></a>
-          <a href="linkedin.com/in/rohit-singh-117644204" target="_blank"><li><i class="ri-linkedin-box-fill"></i><span>Linkdin</span></a> </li></a>
+          <a href="https://www.linkedin.com/in/rohit-singh-117644204/" target="_blank"><li><i class="ri-linkedin-box-fill"></i><span>Linkdin</span></a> </li></a>
           <a href="mailto:thakurrohit4580@gmail.com" target="_blank"> <li> <i class="ri-mail-line"></i><span>Mail</span></a></li></a>
         </div>
       </footer>
